iron-gallery/iron-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: iron-db
    db: mariadb
  name: iron-db
spec:
  replicas: 1
  selector:
    matchLabels:
      run: iron-db
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: iron-db
        db: mariadb
    spec:
      containers:
      - image: kodekloud/irondb:2.0
        name: iron-db
        volumeMounts:
        - name: db
          mountPath: /var/lib/mysql
      volumes:
      - name: db
        emptyDir: {}
