iron-gallery/iron-gallery-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: iron-gallery
  name: iron-gallery-service
  namespace: default
spec:
  clusterIP: 10.100.35.231
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30099
  selector:
    run: iron-gallery
  sessionAffinity: None
  type: NodePort
